Apply formatting