@@ -1,33 +1,28 @@
-/*******************************************************************************
- * This file is part of OpenNMS(R).
+/*
+ * Licensed to The OpenNMS Group, Inc (TOG) under one or more
+ * contributor license agreements.  See the LICENSE.md file
+ * distributed with this work for additional information
+ * regarding copyright ownership.
  *
- * Copyright (C) 2023 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2023 The OpenNMS Group, Inc.
+ * TOG licenses this file to You under the GNU Affero General
+ * Public License Version 3 (the "License") or (at your option)
+ * any later version.  You may not use this file except in
+ * compliance with the License.  You may obtain a copy of the
+ * License at:
  *
- * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
+ *      https://www.gnu.org/licenses/agpl-3.0.txt
  *
- * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as published
- * by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- *
- * OpenNMS(R) is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with OpenNMS(R).  If not, see:
- *      http://www.gnu.org/licenses/
- *
- * For more information contact:
- *     OpenNMS(R) Licensing <license@opennms.org>
- *     http://www.opennms.org/
- *     http://www.opennms.com/
- *******************************************************************************/
-
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
+ * either express or implied.  See the License for the specific
+ * language governing permissions and limitations under the
+ * License.
+ */
 package org.opennms.horizon.inventory.component;
 
+import java.util.List;
+import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.kafka.clients.producer.ProducerRecord;
 import org.opennms.horizon.inventory.model.Node;
@@ -41,16 +36,15 @@ import org.springframework.context.annotation.PropertySource;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 @Component
 @Slf4j
 @PropertySource("classpath:application.yml")
 public class TagPublisher {
     private static final String DEFAULT_TOPIC = "tag-operation";
-    @Value("${kafka.topics.tag-operation:"+DEFAULT_TOPIC +"}")
+
+    @Value("${kafka.topics.tag-operation:" + DEFAULT_TOPIC + "}")
     private String tagTopic;
+
     private final TagRepository tagRepository;
     private final KafkaTemplate<String, byte[]> kafkaTemplate;
 
@@ -60,7 +54,9 @@ public class TagPublisher {
     }
 
     public void publishAllTags() {
-        List<Tag> tags = tagRepository.findAll().stream().filter(t -> t.getNodes().size() > 0).toList();
+        List<Tag> tags = tagRepository.findAll().stream()
+                .filter(t -> t.getNodes().size() > 0)
+                .toList();
         TagOperationList list = createTagOperationFromTag(tags, Operation.ASSIGN_TAG);
         sendTagMessage(list);
     }
@@ -70,14 +66,15 @@ public class TagPublisher {
     }
 
     private TagOperationList createTagOperationFromTag(List<Tag> tags, Operation operation) {
-        List<TagOperationProto> topList = tags.stream().map(t -> TagOperationProto.newBuilder()
-            .setTenantId(t.getTenantId())
-            .setTagName(t.getName())
-            .setOperation(operation)
-            .addAllNodeId(t.getNodes().stream().map(Node::getId).toList())
-            .build()).collect(Collectors.toList());
-        return TagOperationList.newBuilder()
-            .addAllTags(topList).build();
+        List<TagOperationProto> topList = tags.stream()
+                .map(t -> TagOperationProto.newBuilder()
+                        .setTenantId(t.getTenantId())
+                        .setTagName(t.getName())
+                        .setOperation(operation)
+                        .addAllNodeId(t.getNodes().stream().map(Node::getId).toList())
+                        .build())
+                .collect(Collectors.toList());
+        return TagOperationList.newBuilder().addAllTags(topList).build();
     }
 
     private void sendTagMessage(TagOperationList tagData) {
